--- a/Content-structuur-tyling/index.html
+++ b/Content-structuur-tyling/index.html
@@ -18,19 +18,16 @@
 		<p> Hallo, ik ben Israa. Ik ben 19 jaar en ik woon in Puttershoek.</p>
 		<p> Ik doe MBO 4 in Davinci College in Dordrecht en ik doe de opleiding software developer</p>
 
-
 		<ul>
-			<h3> Mijn eigenschappen </h3>
+			
 			<li><a href= "eigenschappen.html">'eigenschappen'</a> </li>
-			<h3> Mijn hobbies </h3>
 			<li><a href= "hobby.html"> 'hobbies' </a> </li>
-			<h3> Mijn opleiding </h3>
 			<li><a href= "opleiding.html"> 'opleiding' </a> </li>
 
 		</ul>
 		
 		<h2> GitHub </h2>
-			<a href= "https://github.com/Isrvx0/statische-front-end"> 'link naar mijn GitHub' </a> -->
+			<a href= "https://github.com/Isrvx0/statische-front-end"> 'link naar mijn GitHub' </a>
 
 
 	</body>
