persoonlijke website verbetert

--- a/Content-structuur-tyling/eigenschappen.html
+++ b/Content-structuur-tyling/eigenschappen.html
@@ -12,8 +12,8 @@
         <img src="image/hello.jfif" alt="anime with dog"  width="300" height="300">
 
 		<h2 style="color:SteelBlue;"> EIGENSCHAPPEN </h2>
-		<p> Ik ben heel flexibil , vriendelijk en positief </p>
-		<P> Ik ben ook een c creatieve persoon en vind leuk om andere te helpen. ik ben heel goed in samenwerken. </P>
+		<p> Ik ben heel flexibil , vriendelijk en positief. </p>
+		<P> Ik ben ook een creatieve persoon en vind leuk om andere te helpen. ik ben heel goed in samenwerken. </P>
         
         <a href= "index.html"> 'terug naar persoonlijke pagine' </a>
 	</body>
