--- a/Content-structuur-tyling/hobby.html
+++ b/Content-structuur-tyling/hobby.html
@@ -16,8 +16,8 @@
             <img src="image/gym.jpg"  alt="fitness"  width="200" height="200">
 
 
-            <p> Ik ben een grote fan voor tekenen. Ik hou ook van muziek te luisteren en boeken lezen</p>
-            <p> Ik doe ook graag fitness en koken vind ik heel leuk.</p>
+            <p> Ik ben een grote fan voor tekenen. Ik hou ook van muziek luisteren en boeken lezen</p>
+            <p> Ik doe ook graag fitness en vind koken erg leuk.</p>
 
         <a href= "index.html"> 'terug naar persoonlijke pagine' </a>
 	</body>
