--- a/Content-structuur-tyling/index.html
+++ b/Content-structuur-tyling/index.html
@@ -16,7 +16,7 @@
 		
 		<img src="image/Animated.jfif" alt="anime with little bird" width="350" height="300">
 		<p> Hallo, ik ben Israa. Ik ben 19 jaar en ik woon in Puttershoek.</p>
-		<p> Ik doe MBO 4 in Davinci College in Dordrecht en ik doe de opleiding software developer</p>
+		<p> Ik doe MBO 4 in Davinci College in Dordrecht en ik doe de opleiding software developer. </p>
 
 		<ul>
 			
