--- a/Content-structuur-tyling/opleiding.html
+++ b/Content-structuur-tyling/opleiding.html
@@ -12,7 +12,7 @@
 		<h2 style="color:SteelBlue;"> OPLEIDING </h2>
             <img src="image/softwareDeveloper.jpg"  alt="software developer"  width="300" height="300">
 
-            <P> Ik doe de opleiding software developer..</P>
+            <P> Ik doe de opleiding software developer.</P>
             <p> Ik was in een meeloop-dag geweest en het was heel leuk. </p>
             <p> Het is een goede opleidng voor de toekomst. En je kan later best veel geld verdienen.</p>
             <p> Het helpt mij ook om mijn talenten beter te benutten en maakt het mogelijk nieuwe uitdagingen aan te gaan.</p>
