--- a/Content-structuur-tyling/template-met-css/template-met-css/template.html
+++ b/Content-structuur-tyling/template-met-css/template-met-css/template.html
@@ -10,6 +10,18 @@
 
 	<body>
 		
+	<div> 
+		<p> CONTENT: </p>
+		<p> Width - 300px </p>
+		<p> Height - 200px </p>
+		<p> Padding - 40px </p>
+		<p> Margin - 40px </p>
+		<p> Border - 20px </p>
+		
+	</div>
+
+
+		
 	</body>
 
 </html>
