--- a/Content-structuur-tyling/persoonlijke-web/index.html
+++ b/Content-structuur-tyling/persoonlijke-web/index.html
@@ -5,6 +5,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>persoonlijke website</title>
+		<link rel="stylesheet" href="css/styles-web.css">
+
 
 	</head>
 	
