--- a/Content-structuur-tyling/persoonlijke-web/hobby.html
+++ b/Content-structuur-tyling/persoonlijke-web/hobby.html
@@ -5,19 +5,20 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>persoonlijke website</title>
+        <link rel="stylesheet" href="css/styles-web.css">
 
 	</head>
 
 	<body>
-		<h2 style="color:SteelBlue;"> HOBBIES </h2>
-            <img src="image/cooking.jpg"  alt="cooking"  width="200" height="200">
-            <img src="image/art.jpg"  alt="drawing"  width="200" height="200">
-            <img src="image/reading.jpg"  alt="reading and music"  width="200" height="200">
-            <img src="image/gym.jpg"  alt="fitness"  width="200" height="200">
+        <img src="image/1830767.png"  alt="cooking"  width="200" height="200">
+        <img src="image/reading-music.png"  alt="reading and music"  width="200" height="200">
+        <img src="image/exercise-icon-9.png"  alt="fitness"  width="200" height="200">
+        <img src="image/art.png"  alt="drawing"  width="200" height="200">
+	    <h2> HOBBIES </h2>
 
-
-            <p> Ik ben een grote fan voor tekenen. Ik hou ook van muziek luisteren en boeken lezen</p>
-            <p> Ik doe ook graag fitness en vind koken erg leuk.</p>
+        <div>
+            <p> Ik ben een grote fan voor tekenen. Ik hou ook van muziek luisteren en boeken lezen. Ik doe ook graag fitness en vind koken erg leuk.</p>
+        </div>
 
         <a href= "index.html"> 'terug naar persoonlijke pagine' </a>
 	</body>
