--- a/Content-structuur-tyling/persoonlijke-web/index.html
+++ b/Content-structuur-tyling/persoonlijke-web/index.html
@@ -6,31 +6,25 @@
 		<meta charset="UTF-8">
 		<title>persoonlijke website</title>
 		<link rel="stylesheet" href="css/styles-web.css">
-
-
 	</head>
-	
+
 	<body>
-		
 		<h1> Israa Almahmoud </h1>
 
-		<h2 style="color:SteelBlue;">INTRODUCTIE</h2>
+		<nav>	
+			<li><a href= "eigenschappen.html"> Eigenschappen </a> </li>
+			<li><a href= "hobby.html"> Hobbies </a> </li>
+			<li><a href= "opleiding.html"> Opleiding </a> </li>
+			<li><a href= "https://github.com/Isrvx0/statische-front-end"> GitHub </a></li>
+		</nav>
 		
-		<img src="image/Animated.jfif" alt="anime with little bird" width="350" height="300">
+
+		<h2> INTRODUCTIE </h2>
+		
+		<img src="image/my-self.jfif" alt="pic of my-self"  width="200" height="290">
 		<p> Hallo, ik ben Israa. Ik ben 19 jaar en ik woon in Puttershoek.</p>
 		<p> Ik doe MBO 4 in Davinci College in Dordrecht en ik doe de opleiding software developer. </p>
-
-		<ul>
-			
-			<li><a href= "eigenschappen.html">'eigenschappen'</a> </li>
-			<li><a href= "hobby.html"> 'hobbies' </a> </li>
-			<li><a href= "opleiding.html"> 'opleiding' </a> </li>
-
-		</ul>
 		
-		<h2> GitHub </h2>
-			<a href= "https://github.com/Isrvx0/statische-front-end"> 'link naar mijn GitHub' </a>
-
 
 	</body>
 
