--- a/Content-structuur-tyling/persoonlijke-web/opleiding.html
+++ b/Content-structuur-tyling/persoonlijke-web/opleiding.html
@@ -5,13 +5,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>persoonlijke website</title>
+        <link rel="stylesheet" href="css/styles-web.css">
 
 	</head>
 
 	<body>
-		<h2 style="color:SteelBlue;"> OPLEIDING </h2>
+		<h2> OPLEIDING </h2>
             <img src="image/softwareDeveloper.jpg"  alt="software developer"  width="300" height="300">
-
             <P> Ik doe de opleiding software developer.</P>
             <p> Ik was in een meeloop-dag geweest en het was heel leuk. </p>
             <p> Het is een goede opleidng voor de toekomst. En je kan later best veel geld verdienen.</p>
