--- a/Content-structuur-tyling/persoonlijke-web/eigenschappen.html
+++ b/Content-structuur-tyling/persoonlijke-web/eigenschappen.html
@@ -5,16 +5,18 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>persoonlijke website</title>
+		<link rel="stylesheet" href="css/styles-web.css">
 
 	</head>
 
 	<body>
-        <img src="image/hello.jfif" alt="anime with dog"  width="300" height="300">
+        <img src="image/2112723.png" alt="highlight circle point Vector icon"  width="250" height="250">
+		<h2> EIGENSCHAPPEN </h2>
+		<div>	
+			<p> Ik ben heel flexibil , vriendelijk en positief. Ik ben ook een creatieve persoon en vind leuk om andere te helpen. ik ben heel goed in samenwerken. </P>
+		</div>
 
-		<h2 style="color:SteelBlue;"> EIGENSCHAPPEN </h2>
-		<p> Ik ben heel flexibil , vriendelijk en positief. </p>
-		<P> Ik ben ook een creatieve persoon en vind leuk om andere te helpen. ik ben heel goed in samenwerken. </P>
-        
+
         <a href= "index.html"> 'terug naar persoonlijke pagine' </a>
 	</body>
 
