--- a/module-2/responsive-web-design/template.html
+++ b/module-2/responsive-web-design/template.html
@@ -5,6 +5,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Titel van de pagina</title>
+		<link rel="stylesheet" href="mainstyles.css">
+ 
 	</head>
 
 	<body>
