--- a/module-2/gridsysteem/Bootstrap_lab1/index.html
+++ b/module-2/gridsysteem/Bootstrap_lab1/index.html
@@ -6,24 +6,30 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css"></style>
 
 	<!-- Link hier je bootstrap! -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 </head>
+
+
 <body>
-	<div class="">
-		<div id="elem1" class="">element 1</div>
-		<div id="elem2" class="">element 2</div>
+	
+	<div class="row">
+		<div id="elem1" class="col-xl-12 col-lg-8 col-md-12 col-sm-12">element 1</div>
+		<div id="elem2" class="col-xl-12 col-lg-4 col-md-12 col-sm-12">element 2</div>
 	</div>
 
-	<div id="sub" class="">
-		<div class="">element 3-1</div>
-		<div class="">element 3-2</div>
-		<div class="">element 3-3</div>
-		<div class="">element 3-4</div>
-		<div class="">element 3-5</div>
-		<div class="">element 3-6</div>
+	<div id="sub" class="row">
+		<div class="col-xl-12 col-lg-3 col-md-4 col-sm-6">element 3-1</div>
+		<div class="col-xl-12 col-lg-3 col-md-4 col-sm-6">element 3-2</div>
+		<div class="col-xl-12 col-lg-3 col-md-4  col-sm-6">element 3-3</div>
+		<div class="col-xl-12 col-lg-3 col-md-4 col-sm-6">element 3-4</div>
+		<div class="col-xl-12 col-lg-3 col-md-4 col-sm-6">element 3-5</div>
+		<div class="col-xl-12 col-lg-3 col-md-4 col-sm-6">element 3-6</div>
 	</div>
 
-	<div id="elem4" class="">element 4</div>
-	<div id="elem5" class="">element 5</div>
+	<div id="elem4" class="col-xl-12 col-lg-8 col-md-6 col-sm-4">element 4</div>
+	<div id="elem5" class="col-xl-12 col-lg-12 col-md-8 col-sm-6">element 5</div>
+
+	
 </body>
 </html>
