de website bewerkt

--- a/module-1/Content-structuur-tyling/persoonlijke-web/index.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/index.html
@@ -4,28 +4,31 @@
 	
 	<head>
 		<meta charset="UTF-8">
-		<title>persoonlijke website</title>
+		<title>personal website</title>
 		<link rel="stylesheet" href="css/styles-web.css">
 	</head>
 
+
 	<body>
-		<h1> Israa Almahmoud </h1>
+		<div class="header"> 
+			<h1> Israa Almahmoud </h1>
+		</div>
 
 		<nav>	
-			<li><a href= "eigenschappen.html"> Eigenschappen </a> </li>
-			<li><a href= "hobby.html"> Hobbies </a> </li>
-			<li><a href= "opleiding.html"> Opleiding </a> </li>
-			<li><a href= "https://github.com/Isrvx0/statische-front-end"> GitHub </a></li>
+			<li><a href= "projects.html"> Projects </a> </li>
+			<li><a href= "hobby.html"> hobbies </a> </li>
+			<li><a href= "education.html"> Education </a> </li>
+			<li><a target="_blank" href= "https://github.com/Isrvx0/statische-front-end"> GitHub </a></li>
 		</nav>
-		
 
-		<h2> INTRODUCTIE </h2>
-		
-		<img src="image/my-self.jfif" alt="pic of my-self"  width="200" height="290">
-		<p> Hallo, ik ben Israa. Ik ben 19 jaar en ik woon in Puttershoek.</p>
-		<p> Ik doe MBO 4 in Davinci College in Dordrecht en ik doe de opleiding software developer. </p>
-		
-
+		<div class="intro">
+			<h2 > INTRODUCTIE </h2>
+			<img class="myself" src="image/my-self.jfif" alt="pic of my-self"  width="200" height="290">
+			<p>Hi! Pleased to meet you. I'm Israa. I'm a student of Da Vinci College and I study software developer.
+				I live in Puttershoek with a family of 5 members and I'm one of 3 siblings.
+				I am a creative person and have many ideas. I can describe myself as a hopeful girl.
+				I love the summer season very much, it is my favorite, I love his blue sky and the sun that full of energy. </p>		
+		</div>
 	</body>
 
 </html>
