--- a/module-1/Content-structuur-tyling/persoonlijke-web/hobby.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/hobby.html
@@ -5,8 +5,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>hobby</title>
-        <link rel="stylesheet" href="css/styles-web.css">
-
+    <link rel="stylesheet" href="css/styles-web.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	</head>
 
 	<body>
@@ -52,3 +52,27 @@
 	</body>
 
 </html>
+
+
+
+
+
+
+
+
+<!-- 
+
+
+<div class="row">
+  <div id="elem1" class="col-xl-12 col-lg-8 col-md-12 col-sm-3">
+    <li><a target="_blank" href= "https://github.com/Isrvx0/statische-front-end"> GitHub </a></li>
+  </div>
+  <div id="elem1" class="col-xl-12 col-lg-8 col-md-12 col-sm-3">
+    <li><a target="_blank" href= "https://github.com/Isrvx0/statische-front-end"> GitHub </a></li>
+  </div>	
+  <div id="elem1" class="col-xl-12 col-lg-8 col-md-12 col-sm-3">
+    <li><a target="_blank" href= "https://github.com/Isrvx0/statische-front-end"> GitHub </a></li>
+  </div>
+  <div id="elem1" class="col-xl-12 col-lg-8 col-md-12 col-sm-3">
+    <li><a target="_blank" href= "https://github.com/Isrvx0/statische-front-end"> GitHub </a></li>
+  </div> -->
