--- a/module-1/Content-structuur-tyling/persoonlijke-web/index.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/index.html
@@ -6,29 +6,64 @@
 		<meta charset="UTF-8">
 		<title>personal website</title>
 		<link rel="stylesheet" href="css/styles-web.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
 	</head>
 
-
 	<body>
-		<div class="header"> 
-			<h1> Israa Almahmoud </h1>
-		</div>
+		<header>
+			<nav class="navbar navbar-expand-sm">
+				<ul class="menu-container container">
+					<li class="nav-item">
+						<a class="navbar-brand" href= "hobby.html" class="link-info"> 
+							<img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+							Bootstrap
+						</a> 
+					</li>
+					<li class="nav-item">
+						<a href= "education.html" class="link-succes"> Education </a> 
+					</li>
+					<li class="nav-item">
+						<a href= "projects.html" class="link-warning"> Projects </a> 
+					</li>
+					<li class="nav-item">
+						<a target="_blank" href= "https://github.com/Isrvx0/statische-front-end"> GitHub </a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+	
+		<img src="image/background.jpg" class="col-12" alt="software image"  height="auto">
 
-		<nav>	
-			<li><a href= "projects.html"> Projects </a> </li>
-			<li><a href= "hobby.html"> hobbies </a> </li>
-			<li><a href= "education.html"> Education </a> </li>
-			<li><a target="_blank" href= "https://github.com/Isrvx0/statische-front-end"> GitHub </a></li>
-		</nav>
-
-		<div class="intro">
+		<!-- <div class="container-fluid mt-3">
 			<h2 > INTRODUCTIE </h2>
-			<img class="myself" src="image/my-self.jfif" alt="pic of my-self"  width="200" height="290">
-			<p>Hi! Pleased to meet you. I'm Israa. I'm a student of Da Vinci College and I study software developer.
-				I live in Puttershoek with a family of 5 members and I'm one of 3 siblings.
-				I am a creative person and have many ideas. I can describe myself as a hopeful girl.
-				I love the summer season very much, it is my favorite, I love his blue sky and the sun that full of energy. </p>		
+			<div class="row">
+				<div class="col-5">
+					<img class="myself" src="image/my-self.jfif" alt="pic of my-self"  width="200" height="290">
+				</div>
+				<div class="col-7" >
+					<p>Hi! Pleased to meet you. I'm Israa. I'm a student of Da Vinci College and I study software developer.
+						I live in Puttershoek with a family of 5 members and I'm one of 3 siblings.
+						I am a creative person and have many ideas. I can describe myself as a hopeful girl.
+						I love the summer season very much, it is my favorite, I love his blue sky and the sun that full of energy. </p>
+				</div>
+			</div>
+					
+		</div> -->
+
+		<div class="text_box">
+			<div class="container-fluid mt-3">
+					<h1 style="color:black "><em> What I do? </em></h1>
+					<p> Hi! Pleased to meet you. I'm Israa. I'm a student of Da Vinci College and I study software developer.
+					I live in Puttershoek with a family of 5 members and I'm one of 3 siblings.
+					I am a creative person and have many ideas. I can describe myself as a hopeful girl.
+					I love the summer season very much, it is my favorite, I love his blue sky and the sun that full of energy. </p>
+			</div>
 		</div>
+
+		<footer class="container-fluid text-center">
+			<h4>Follow me on Social-Media</h4>
+		</footer>
 	</body>
 
 </html>
