main page aangepast

--- a/module-1/Content-structuur-tyling/persoonlijke-web/index.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/index.html
@@ -15,25 +15,22 @@
 			<nav class="navbar navbar-expand-sm">
 				<ul class="menu-container container">
 					<li class="nav-item">
-						<a class="navbar-brand" href= "hobby.html" class="link-info"> 
-							<img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-							Bootstrap
-						</a> 
+						<a class="navbar-brand" href= "hobby.html" class="link-info"> ABOUT ME</a> 
 					</li>
 					<li class="nav-item">
-						<a href= "education.html" class="link-succes"> Education </a> 
+						<a href= "education.html"> Education </a> 
 					</li>
 					<li class="nav-item">
-						<a href= "projects.html" class="link-warning"> Projects </a> 
+						<a href= "projects.html"> Projects </a> 
 					</li>
-					<li class="nav-item">
+					<li class="nav-item ">
 						<a target="_blank" href= "https://github.com/Isrvx0/statische-front-end"> GitHub </a>
 					</li>
 				</ul>
 			</nav>
 		</header>
 	
-		<img src="image/background.jpg" class="col-12" alt="software image"  height="auto">
+		<img src="image/try.jpg" class="col-sm-12" alt="software image"  class="mw-100">
 
 		<!-- <div class="container-fluid mt-3">
 			<h2 > INTRODUCTIE </h2>
@@ -53,16 +50,51 @@
 
 		<div class="text_box">
 			<div class="container-fluid mt-3">
-					<h1 style="color:black "><em> What I do? </em></h1>
-					<p> Hi! Pleased to meet you. I'm Israa. I'm a student of Da Vinci College and I study software developer.
-					I live in Puttershoek with a family of 5 members and I'm one of 3 siblings.
-					I am a creative person and have many ideas. I can describe myself as a hopeful girl.
-					I love the summer season very much, it is my favorite, I love his blue sky and the sun that full of energy. </p>
+					<h1 style="color: #8296af; "><em> What I do? </em></h1>
+					<p> Hi! Pleased to meet you :). <br>As a softer student, . I am working on developing myself and learning more about software.
+						I have good experience in making programs using the Python language, such as making a calculator, or maybe a game.<br>
+						Also, I have good experience with JavaScript, HTML, CSS and Bootstrap, as I use these languages to create websites.
+					</p>
 			</div>
 		</div>
+		
 
-		<footer class="container-fluid text-center">
-			<h4>Follow me on Social-Media</h4>
+		<footer class="text-start text-lg-center bg-light text-muted;">
+			<h4>Follow me on Social-Media:</h4>
+			
+			<div class=" mx-auto container-sm">
+				<a href="https://github.com/Isrvx0" class=" margin me-4 text-reset">
+					<i class=" bi bi-github" style="font-size: 2rem; color:#8296af;"></i>
+				</a>
+				<a href="https://twitter.com/brkjixz1" class="margin me-4 text-reset">
+					<i class="bi bi-instagram" style="font-size: 2rem; color:#8296af;"></i>
+				</a>
+				<a href="https://twitter.com/brkjixz1" class="margin me-4 text-reset">
+					<i class="bi bi-twitter" style="font-size: 2rem; color:#8296af;"></i>
+				</a>
+				<a href="https://linktr.ee/brkjixz1" class="margin me-4 text-reset">
+					<i class="bi bi-link" style="font-size: 2rem; color:#8296af;"></i>
+				</a>
+			</div>
+
+			<h6 class="text-danger font-weight-bold mt-4">Contacts: </h6>
+			
+			<div class="row">
+				<div class="col-sm-6">
+					<i class="bi bi-telephone" style="font-size: 2rem; color:black;"></i>
+					<span class="margin font-weight-bold" style="color: #485363; "> 06-84677071</span>
+						<i class=" pull-right icon-chevron-right"></i>
+					</span>
+				</div>
+				
+				<div class="col-sm-6">
+					<i class="bi bi-envelope-heart" style="font-size: 2rem; font-weight: bold; color:black;"></i>
+					<span class="margin font-weight-bold" style="color: #485363; "> sosoalmhmoud559@gmail.com </span>
+						<i class=" pull-right icon-chevron-right"></i>
+					</span>
+				</div>
+			</div>
+
 		</footer>
 	</body>
 
