--- a/module-1/Content-structuur-tyling/persoonlijke-web/hobby.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/hobby.html
@@ -7,6 +7,7 @@
 		<title>hobby</title>
     <link rel="stylesheet" href="css/styles-web.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
 	</head>
 
 	<body>
@@ -58,7 +59,12 @@
 
 
 
-
+<!--
+  ABOUT ME:
+  Hi! Pleased to meet you. I'm Israa. I'm a student of Da Vinci College and I study software developer.
+					I live in Puttershoek with a family of 5 members and I'm one of 3 siblings.
+					I am a creative person and have many ideas. I can describe myself as a hopeful girl.
+					I love the summer season very much, it is my favorite, I love his blue sky and the sun that full of energy. -->
 
 <!-- 
 
