projects page verbetert

--- a/module-1/Content-structuur-tyling/persoonlijke-web/index.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/index.html
@@ -15,7 +15,7 @@
 			<nav class="navbar navbar-expand-sm">
 				<ul class="menu-container container">
 					<li class="nav-item">
-						<a class="navbar-brand" href= "hobby.html" class="link-info"> ABOUT ME</a> 
+						<a class="navbar-brand" href= "aboutME.html" class="link-info"> ABOUT ME</a> 
 					</li>
 					<li class="nav-item">
 						<a href= "education.html"> Education </a> 
