--- a/module-1/Content-structuur-tyling/persoonlijke-web/projects.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/projects.html
@@ -4,64 +4,73 @@
 	
 	<head>
 		<meta charset="UTF-8">
-		<title> Project </title>
+		<title>Projects</title>
 		<link rel="stylesheet" href="css/styles-web.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
 	</head>
 
 	<body>
-		<div class="project"> 
 
-			<!-- https://www.w3schools.com/html/tryit.asp?filename=tryhtml_responsive_page -->
-			<h2> PROJECTS </h2>
-			<img src="image/projects.jpg" alt=" A day in the of a software developer"  width="250" height="auto">
-			<p> During my studies at Da Vinci School, I worked on more than one project. I enjoyed it a lot. And that's why I want to share some of them with you. </P>
+		<a href="index.html" class=" margin me-3 text-reset">
+			<i class="margin margin_top bi bi-box-arrow-left" style="font-size: 2rem; color:#6c6c6d;"></i>
+			<span class=" font-weight-bold" style="color: #485363; "> back </span>
+		</a>
+
+
+		<div class="container">
+
+			<img src="image/header1.gif" alt=" A day in the of a software developer"  class="img-fluid" style="margin-top: 5%;">
+			<p class="font-weight-bold" style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; padding-left: 10px; margin-top: 3%;"> 
+				During my studies at Da Vinci School, I worked on more than one project. I enjoyed it a lot. And that's why I want to share some of them with you. </P>
+		
+
+			<h3 class="text-center font-weight-bold" style="margin-top: 7%;"> MY PROJECTS </h3>
+			<div class="row space">
+				<div class="col-6 mb-4 mb-lg-0">
+					<a target="_blank" href="projects/media-queries.zip">
+						<img
+							src="image/media-queries.webp" class="w-100 mb-4"
+							alt="a picture of myself" width="auto" height="auto"
+						/>
+					</a>
+					<h6> Oefenen met media queries </h6>
+					
+					<a target="_blank" href="projects/robotarm-python.zip">
+						<img
+						src="image/robot-arm.webp" class="w-100 mb-4"
+						alt="a picture of myself" width="auto" height="auto"
+						/>
+					</a>
+					<h6> Robot-arm opdracht </h6>
+				</div>
+		
+				<div class="col-6 mb-4 mb-lg-0">
+					<a target="_blank" href="projects/game.py">
+						<img
+							src="image/game.png" class="w-100 mb-4"
+							alt="a picture of myself" width="auto" height="auto"
+						/>
+					</a>
+					<h6> World saver game </h6>
+
+					<a target="_blank" href="projects/lottery_game.py">
+						<img
+							src="image/lottery_game.jpg" class="w-100 mb-4" style="margin-top: 50px ;"
+							alt="a picture of myself" width="auto" height="auto"
+						/>
+					</a>
+					<h6>lottery game</h6>	
+				</div>
+				
+			</div>
 		</div>
 
-		<div class="title">
-			<h3> MY PROJECTS </h3>
-		</div>
-		
-		<div class="responsive">
-			<div class="gallery">
-				<a target="_blank" href="projects/media-queries.zip">
-				<img src="image/media-queries.webp" alt="Cinque Terre" width="600" height="400">
-				</a>
-				<div class="desc"> Oefenen met media queries </div>
-		
-			</div>
-		</div>
-		
-		<div class="responsive"> 
-			<div class="gallery">
-				<a target="_blank" href="projects/robotarm-python.zip">
-				<img src="image/robot-arm.webp" alt="Forest" width="600" height="400">
-				</a>
-				<div class="desc"> Robot-arm opdracht </div>
-			</div>
-		</div>
-		
-		<div class="responsive"> 
-			<div class="gallery">
-				<a target="_blank" href="projects/game.py">
-				<img src="image/world-saver.webp" alt="Northern Lights" width="600" height="400">
-				</a>
-				<div class="desc"> World saver game </div>
-			</div>
-		</div>
-		
-		<div class="responsive">
-			<div class="gallery">
-				<a target="_blank" href="projects/lottery_game.py">
-				<img src="image/lottery.jpg" alt="Mountains" width="600" height="400">
-				</a>
-				<div class="desc">lottery game</div>
-			</div>
-		</div>
-
-		<a class="back" href= "index.html"> 'back to personal page' </a>
-	
-	
+		<footer class="text-center bg-light text-muted;">
+			<p class="font-weight-bold" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif"> 
+				If you are interested to see more of my work :</p>
+			<a target="_blank" href="https://github.com/Isrvx0" class=" font-weight-bold text-danger"> https://github.com/Isrvx0 </a>
+		  </footer>
 	</body>
 
 </html>
