education page verbetert

--- a/module-1/Content-structuur-tyling/persoonlijke-web/projects.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/projects.html
@@ -31,7 +31,7 @@
 					<a target="_blank" href="projects/media-queries.zip">
 						<img
 							src="image/media-queries.webp" class="w-100 mb-4"
-							alt="a picture of myself" width="auto" height="auto"
+							alt="media queries" width="auto" height="auto"
 						/>
 					</a>
 					<h6> Oefenen met media queries </h6>
@@ -39,7 +39,7 @@
 					<a target="_blank" href="projects/robotarm-python.zip">
 						<img
 						src="image/robot-arm.webp" class="w-100 mb-4"
-						alt="a picture of myself" width="auto" height="auto"
+						alt="Robot-arm" width="auto" height="auto"
 						/>
 					</a>
 					<h6> Robot-arm opdracht </h6>
@@ -49,7 +49,7 @@
 					<a target="_blank" href="projects/game.py">
 						<img
 							src="image/game.png" class="w-100 mb-4"
-							alt="a picture of myself" width="auto" height="auto"
+							alt="World saver game" width="auto" height="auto"
 						/>
 					</a>
 					<h6> World saver game </h6>
@@ -57,7 +57,7 @@
 					<a target="_blank" href="projects/lottery_game.py">
 						<img
 							src="image/lottery_game.jpg" class="w-100 mb-4" style="margin-top: 50px ;"
-							alt="a picture of myself" width="auto" height="auto"
+							alt="lottery game" width="auto" height="auto"
 						/>
 					</a>
 					<h6>lottery game</h6>	
@@ -70,7 +70,7 @@
 			<p class="font-weight-bold" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif"> 
 				If you are interested to see more of my work :</p>
 			<a target="_blank" href="https://github.com/Isrvx0" class=" font-weight-bold text-danger"> https://github.com/Isrvx0 </a>
-		  </footer>
+		</footer>
 	</body>
 
 </html>
