wireframes desktop + code aangepast

--- a/module-1/Content-structuur-tyling/persoonlijke-web/education.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/education.html
@@ -21,7 +21,7 @@
                         
                         <img src="image/school.jpg" class="col-12" alt="software image"  class="mw-100" style="margin-top: 3%;">
 
-                        <P  class=" margin " style="margin-left: 20px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif "> 
+                        <p  class="margin" style="margin-left: 20px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif "> 
                                 I'm doing the software developer course at vocational Education level 4. I had been in an open day and it was great fun. It is good course for the future and I can earn a lot of money later on.
                                 It also helps me to make better use of my talents and enables me to take on new challenges.
                                 For example, growing into other tasks and taking on responsibilities.</p>
@@ -36,7 +36,6 @@
                                         <span class="margin font-weight-bold" style="color: #485363; "> Leerparkpromenade 100, 3312 KW Dordrecht
                                         </span>
                                                 <i class=" pull-right icon-chevron-right"></i>
-                                        </span>
                                 </div>
                                 
                                 <div class="col-sm-6">
