--- a/module-1/Content-structuur-tyling/persoonlijke-web/index.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/index.html
@@ -51,7 +51,7 @@
 		<div class="text_box">
 			<div class="container-fluid mt-3">
 					<h1 style="color: #8296af; "><em> What I do? </em></h1>
-					<p> Hi! Pleased to meet you :). <br>As a softer student, . I am working on developing myself and learning more about software.
+					<p> Hi! Pleased to meet you :). <br>As a software student, I am working on developing myself and learning more about software.
 						I have good experience in making programs using the Python language, such as making a calculator, or maybe a game.<br>
 						Also, I have good experience with JavaScript, HTML, CSS and Bootstrap, as I use these languages to create websites.
 					</p>
