desktop realiseren bewerkt

--- a/module-1/Content-structuur-tyling/persoonlijke-web/index.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/index.html
@@ -29,24 +29,17 @@
 				</ul>
 			</nav>
 		</header>
-	
-		<img src="image/try.jpg" class="col-sm-12" alt="software image"  class="mw-100">
-
-		<!-- <div class="container-fluid mt-3">
-			<h2 > INTRODUCTIE </h2>
-			<div class="row">
-				<div class="col-5">
-					<img class="myself" src="image/my-self.jfif" alt="pic of my-self"  width="200" height="290">
-				</div>
-				<div class="col-7" >
-					<p>Hi! Pleased to meet you. I'm Israa. I'm a student of Da Vinci College and I study software developer.
-						I live in Puttershoek with a family of 5 members and I'm one of 3 siblings.
-						I am a creative person and have many ideas. I can describe myself as a hopeful girl.
-						I love the summer season very much, it is my favorite, I love his blue sky and the sun that full of energy. </p>
+		<div class="container">
+			<div class="text_with_image">
+				<div class="row">
+					<img src="image/header.jpg" class="col-sm-12" alt="software image" class="col-12">
+					<div class="centered">SOFTWARE
+						<h3> DEVELOPER</h3>
+					</div>
 				</div>
 			</div>
-					
-		</div> -->
+		</div>
+
 
 		<div class="text_box">
 			<div class="container-fluid mt-3">
@@ -64,16 +57,16 @@
 			
 			<div class=" mx-auto container-sm">
 				<a href="https://github.com/Isrvx0" class=" margin me-4 text-reset">
-					<i class=" bi bi-github" style="font-size: 2rem; color:#8296af;"></i>
+					<i class=" bi bi-github" ></i>
 				</a>
 				<a href="https://twitter.com/brkjixz1" class="margin me-4 text-reset">
-					<i class="bi bi-instagram" style="font-size: 2rem; color:#8296af;"></i>
+					<i class="bi bi-instagram" ></i>
 				</a>
 				<a href="https://twitter.com/brkjixz1" class="margin me-4 text-reset">
-					<i class="bi bi-twitter" style="font-size: 2rem; color:#8296af;"></i>
+					<i class="bi bi-twitter" ></i>
 				</a>
 				<a href="https://linktr.ee/brkjixz1" class="margin me-4 text-reset">
-					<i class="bi bi-link" style="font-size: 2rem; color:#8296af;"></i>
+					<i class="bi bi-link"></i>
 				</a>
 			</div>
 
@@ -88,7 +81,7 @@
 				</div>
 				
 				<div class="col-sm-6">
-					<i class="bi bi-envelope-heart" style="font-size: 2rem; font-weight: bold; color:black;"></i>
+					<i class="bi bi-envelope-heart" style="color:black;"></i>
 					<span class="margin font-weight-bold" style="color: #485363; "> sosoalmhmoud559@gmail.com </span>
 						<i class=" pull-right icon-chevron-right"></i>
 					</span>
