--- a/module-1/Content-structuur-tyling/persoonlijke-web/aboutME.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/aboutME.html
@@ -20,7 +20,7 @@
     <!-- Gallery -->
     <div class="container">
       <div class="row space">
-        <div class="col-6 mb-4 mb-lg-0">
+        <div class="col-6 col-xl-3 mb-4 mb-lg-0">
           <img
             src="image/photo5.jpeg" class="w-100 mb-4"
             alt="a picture of myself" width="auto" height="auto"
@@ -31,7 +31,7 @@
           />
         </div>
 
-        <div class="col-6 mb-4 mb-lg-0">
+        <div class="col-6 col-xl-3 mb-4 mb-lg-0">
           <img
             src="image/photo3.jpeg" class="w-100 mb-4"
             alt="a picture of myself" width="auto" height="auto"
@@ -41,47 +41,44 @@
             alt="a picture of myself" width="auto" height="auto"
           />
         </div>
+        <div class="col-12 col-xl-6 mb-4 mb-lg-0">
+          <h3 class="text-warning font-weight-bold margin" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
+            WHO AM I? </h3>
+          <p class= "margin font-weight-bold" style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; padding-left: 30px;">
+            I'm a student of Da Vinci College and I study software developer.
+            I live in Puttershoek with a family of 5 members and I'm one of 3 siblings.
+            I am a creative person and have many ideas. I can describe myself as a positive girl.
+            I love the summer season very much, it is my favorite, I love his blue sky and the sun that full of energy.
+            <br>In my spare time, I love to research and learn new things, 
+            but I also spend some time doing my hobbies like painting, cooking, and sports.
+          </p>
+        </div>
         
       </div>
     </div>
 
-
-
-    <div class="container">
-        <h3 class="text-warning font-weight-bold margin" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
-          WHO AM I? </h3>
-        <p class="margin font-weight-bold" style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; padding-left: 30px;">
-          I'm a student of Da Vinci College and I study software developer.
-          I live in Puttershoek with a family of 5 members and I'm one of 3 siblings.
-          I am a creative person and have many ideas. I can describe myself as a positive girl.
-          I love the summer season very much, it is my favorite, I love his blue sky and the sun that full of energy.
-          <br>In my spare time, I love to research and learn new things, 
-          but I also spend some time doing my hobbies like painting, cooking, and sports.
-        </p>
+    <div class="footer_fix">
+      <footer class="text-center bg-light text-muted;">
+        <h6 class="text-danger font-weight-bold margin"> LINKS: </h6>
+        <div class=" mx-auto container-sm">
+          <a href="https://github.com/Isrvx0" class=" margin me-4 text-reset">
+            <i class=" bi bi-github" style="font-size: 2rem; color:#8296af;"></i>
+          </a>
+          <a href="https://twitter.com/brkjixz1" class="margin me-4 text-reset">
+            <i class="bi bi-instagram" style="font-size: 2rem; color:#8296af;"></i>
+          </a>
+          <a href="https://twitter.com/brkjixz1" class="margin me-4 text-reset">
+            <i class="bi bi-twitter" style="font-size: 2rem; color:#8296af;"></i>
+          </a>
+          <a href="https://linktr.ee/brkjixz1" class="margin me-4 text-reset">
+            <i class="bi bi-link" style="font-size: 2rem; color:#8296af;"></i>
+          </a>
+          <a href="image/CV.pdf.docx" class="margin me-4 text-reset">
+            <i class="bi bi-file-earmark-person-fill" style="font-size: 2rem; color:#8296af;"></i>
+          </a>
+        </div>
+      </footer>
     </div>
-
-    <footer class="text-center bg-light text-muted;">
-      <h6 class="text-danger font-weight-bold margin"> LINKS: </h6>
-      <div class=" mx-auto container-sm">
-				<a href="https://github.com/Isrvx0" class=" margin me-4 text-reset">
-					<i class=" bi bi-github" style="font-size: 2rem; color:#8296af;"></i>
-				</a>
-				<a href="https://twitter.com/brkjixz1" class="margin me-4 text-reset">
-					<i class="bi bi-instagram" style="font-size: 2rem; color:#8296af;"></i>
-				</a>
-				<a href="https://twitter.com/brkjixz1" class="margin me-4 text-reset">
-					<i class="bi bi-twitter" style="font-size: 2rem; color:#8296af;"></i>
-				</a>
-				<a href="https://linktr.ee/brkjixz1" class="margin me-4 text-reset">
-					<i class="bi bi-link" style="font-size: 2rem; color:#8296af;"></i>
-				</a>
-        <a href="image/CV.pdf.docx" class="margin me-4 text-reset">
-					<i class="bi bi-file-earmark-person-fill" style="font-size: 2rem; color:#8296af;"></i>
-				</a>
-			</div>
-
-    </footer>
-
 
 	</body>
 
