website beetje verbetert

--- a/module-1/Content-structuur-tyling/persoonlijke-web/aboutME.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/aboutME.html
@@ -52,11 +52,16 @@
             <br>In my spare time, I love to research and learn new things, 
             but I also spend some time doing my hobbies like painting, cooking, and sports.
           </p>
+
         </div>
         
       </div>
     </div>
 
+
+    <!-- <a href="image/CV.pdf.docx" class="me-4 text-reset">
+      <h6> If you're interested to know more of me, here is my cv: </h6>
+    </a> -->
     <div class="footer_fix">
       <footer class="text-center bg-light text-muted;">
         <h6 class="text-danger font-weight-bold margin"> LINKS: </h6>
@@ -64,7 +69,7 @@
           <a href="https://github.com/Isrvx0" class=" margin me-4 text-reset">
             <i class=" bi bi-github" style="font-size: 2rem; color:#8296af;"></i>
           </a>
-          <a href="https://twitter.com/brkjixz1" class="margin me-4 text-reset">
+          <a href="https://www.instagram.com/brkjixz1/" class="margin me-4 text-reset">
             <i class="bi bi-instagram" style="font-size: 2rem; color:#8296af;"></i>
           </a>
           <a href="https://twitter.com/brkjixz1" class="margin me-4 text-reset">
