--- a/module-1/Content-structuur-tyling/persoonlijke-web/index.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/index.html
@@ -53,7 +53,7 @@
 					<a href="https://github.com/Isrvx0" class=" margin me-4 text-reset">
 						<i class=" bi bi-github" ></i>
 					</a>
-					<a href="https://twitter.com/brkjixz1" class="margin me-4 text-reset">
+					<a href="https://www.instagram.com/brkjixz1/" class="margin me-4 text-reset">
 						<i class="bi bi-instagram" ></i>
 					</a>
 					<a href="https://twitter.com/brkjixz1" class="margin me-4 text-reset">
