project naar assignment verandert

--- a/module-1/Content-structuur-tyling/persoonlijke-web/projects.html
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/projects.html
@@ -21,10 +21,10 @@
 		<div class="container project">
 
 			<img src="image/header1.gif" alt=" A day in the of a software developer"  class="img-fluid">
-			<p> During my studies in Davinci I gained experience in coding, collaborating on software projects and testing systems and applications. I worked on more than one project. I enjoyed it a lot. And these are some of the projects I have worked on and want to share it with you. </P>
+			<p> During my studies in Davinci I gained experience in coding, collaborating on software projects and testing systems and applications. I worked on more than one school assignment. I enjoyed it a lot. And these are some of it that I have worked on and want to share it with you. </P>
 		
 
-			<h3> MY PROJECTS </h3>
+			<h3> ASSIGNMENT </h3>
 			<div class="container">
 				<div class="row space">
 
